[package]

name = "sharegl"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[dependencies.core_foundation]

git = "https://github.com/servo/rust-core-foundation"

[dependencies.io_surface]

git = "https://github.com/servo/rust-io-surface"

[dependencies.opengles]

git = "https://github.com/servo/rust-opengles"
